# weatherman

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.titiler.yml  docker-compose.yml  pyproject.toml
.beads/: issues.jsonl
.plans/: Maritime Weather Platform Plan v4.md
docs/: ais-neptune.md
docs/adr/: 001-zarr-dataset-schema.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: ais-bootstrap.spec.ts  fixtures.ts  forecast-controls.spec.ts  (+2 more)
scripts/: compare_ais_parity.py  dev.sh  notify_ais.py  refresh_ais.py  run_pipeline.py  run_titiler.py  stream_ais_neptune.py
tests/: conftest_ais.py  test_ais_db.py  test_ais_ingest.py  test_ais_mvt.py  test_ais_neptune.py  test_ais_normalize.py  test_ais_parity.py  test_ais_refresh.py  test_ais_snapshot.py  test_ais_tracks.py  test_api_routes.py  test_app.py  test_app_factory.py  test_caching.py  test_coastal_fill.py  test_cog_pipeline.py  test_data_encoder.py  test_data_tiles.py  test_docker_compose.py  test_edr_position.py  test_events.py  test_geo.py  test_gfs_downloader.py  test_grib2_to_zarr.py  test_health.py  test_ingest_reliability.py  test_layers.py  test_lifecycle.py  test_manifest.py  test_metrics.py  test_neptune_rollout.py  test_publish.py  test_publish_lock.py  test_qc_completeness.py  test_qc_geometry.py  test_qc_sanity.py  test_refresh_ais_script.py  test_resample.py  test_retention.py  test_run_catalog.py  (+13 more)
(+130 files in other folders)
