[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weatherman"
version = "0.1.0"
description = "Maritime Weather & Dry Bulk AIS Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "herbie-data>=2024.8",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "opentelemetry-sdk>=1.40.0",
    "pystac>=1.14.3",
    "pyyaml>=6.0.3",
    "rasterio>=1.4.4",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/weatherman"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
